# tas-studio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: vapours
include/al/: util.hpp
include/al/LiveActor/: LiveActor.h
include/al/PlayerHolder/: PlayerHolder.h
include/al/actor/: ActorInitInfo.h  Placement.h
include/al/area/: AreaObj.h  AreaShape.h
include/al/camera/: CameraDirector.h  CameraPoseUpdater.h  CameraPoser.h  SubCameraRenderer.h  alCameraPoserFunction.h
include/al/collision/: CollisionParts.h  KCHitInfo.h  KCPrismData.h  KCPrismHeader.h  KCollisionServer.h  Triangle.h
include/al/factory/: ActorFactory.h  ActorFactoryEntries100.h  AreaObjFactory.h  AreaObjFactoryEntries100.h  CameraPoserFactory.h  CameraPoserFactoryEntries100.h  Factory.h  ProjectActorFactory.h  ProjectAreaFactory.h  ProjectCameraPoserFactory.h
include/al/hio/: HioNode.h
include/al/layout/: LayoutActionKeeper.h  LayoutActor.h  LayoutKeeper.h  (+1 more)
include/fl/: OutPacket.h  Server.h  TasHeap.h  TasHolder.h  TasHooks.h  TasPackets.h  TasServer.h
module/: subsdk9.json.template  subsdk9.specs.template
src/: lib.hpp  types.h
src/program/: main.cpp
studio/: CMakeLists.txt
studio/include/: types.h
studio/include/client/: Client.h  OutPacket.h  TasClient.h
studio/include/file/: KCollision.h
studio/include/ui/: Camera.h  Scene.h
studio/res/shaders/: normal.fs  normal.vs
studio/src/: tas-studio.cpp
studio/src/client/: Client.cpp  TasClient.cpp
studio/src/file/: KCollision.cpp
studio/src/ui/: Camera.cpp  Scene.cpp
syms/130/: main.sym
(+39 files in other folders)
